# HydroScreen

./: .gitignore  README.md  build-sidecar.js  package-lock.json  package.json  vite.config.js
.github/workflows/: release.yml
sensor-bridge/: Program.cs  sensor-bridge.csproj
src/: app.html  styles.css
src-tauri/: Cargo.toml  app.manifest  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  sidecar_handler.rs
src-tauri/src/aio_communicator/: constants.rs  device.rs  mod.rs
src/lib/: gif_utils.ts  types.ts  utils.ts
src/lib/components/: CanvasRenderer.svelte  ConfirmationModal.svelte  ErrorModal.svelte  SettingsModal.svelte  ThemeConfigurator.svelte  ThemeSelector.svelte  TitleBar.svelte
src/lib/stores/: sensors.ts  settings.ts  themeStore.ts
src/lib/themes/: index.ts  registry.ts  types.ts
src/routes/: +layout.svelte  +page.svelte
