[package]
name = "hydro-screen"
version = "1.1.0"
description = "Corsair LCD screen controller"
authors = ["UDPSendToFailed"]
edition = "2024"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hidapi = "2.6.3"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
async-trait = "0.1"
crossbeam-channel = "0.5"
tauri-plugin-process = "2.3.1"
tauri-plugin-single-instance = { version = "2.3.6", features = ["deep-link"] }
font-loader = "0.11"
